<resources>
    <string name="app_name">Trinkbrunnen</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- Parse api -->
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <!-- testV2 -->
<!--
    <string name="back4app_app_id">wFlle6d4glSQLaa0Ran941OO9bcz4nuxgvSBEcKq</string>
    <string name="back4app_client_key">PFERxOx9CDSjIuUQISgR13v78kfjAu5CWyj1WUex</string>
-->
    <!-- Suchen DB -->
    <string name="back4app_app_id">iMHkoKnCkvGfTr0E3gM21UgcRcALY54RJwjPDZiz</string>
    <string name="back4app_client_key">o3doai8x9aUEzkZxDivkGB5TM2VKYebbg1V9azBs</string>

    <!-- Nav Bar -->
    <string name="save">Save</string>
    <string name="map">Map</string>
    <string name="manage">Manage</string>
    <string name="add">Add</string>
    <string name="home">Home</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="permissionDeniedText">This app need your permission to access location. With out this, the app cannot function properly. you can grant location permision from settings</string>
    <string name="mapSpeakiableText">current location in map</string>
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>

    <!-- Layer -->
    <string name="cycling">Cycling</string>
    <string name="standard">Standard</string>
    <string name="hybrid">Hybrid</string>
    <string name="satellite">Satellite</string>
    <string name="transport">Transport</string>

    <!--  -->
    <string name="toolbar_title">Suchen</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register_to_login">Have an account? Login from <span><u><i>here</i></u></span> </string>
    <string name="developed_by_sakib"><i>Developed by Sakib</i></string>
    <string name="register">REGISTER</string>
    <string name="male_avatar_4">male_avater_4</string>
    <string name="male_avatar_3">male_avater_3</string>
    <string name="isFountainActive">Is the Fountain Currently Active?</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>


    <string name="settingsContributionsIsActive">Is it currently active:</string>


</resources>